# School

./: .gitignore
COMP-1537/Assignment 1/: artist.html  index.html  site.webmanifest  sw.js
COMP-1537/Assignment 1/src/: artist.js  artist_data.mjs  index.js
COMP-1537/Assignment 1/styles/: artist.css  index.css
COMP-1537/Lab 1/: about-comp-1537.html  app.js  index.html
COMP-1537/Lab 2/: about-comp-1510.html  app.js  index.html
COMP-1537/Lab 2/css/: style.css
COMP-1537/Lab 3/: part1.css  part1.html  part2.css
COMP-1537/Lab 4/: index.html  styles.css
COMP-1537/Lab 5/: part1.html  part1.js  part2.html  part2.js
COMP-1537/Lab 6/: index.css  index.html  index.js
COMP-1537/Lab 7/: constants.js  error_logging.js  questions.json  quiz.js
COMP-1537/Lab 8/: package-lock.json  package.json  server.js
COMP-1537/Lab 8/controllers/: 404controller.js  communityItemsController.js  controllers.js  loginController.js  myItemsController.js  signUpController.js  views.js
COMP-1537/Lab 8/controllers/loginUtils/: LoginAuthenticator.js
COMP-1537/Lab 8/controllers/signUpUtils/: ImageNumberValidator.js  PasswordValidator.js  SignUpValidator.js  UsernameValidator.js
COMP-1537/Lab 8/controllers/utils/: EvaluationResult.js  ItemTemplate.js  UserTemplate.js
COMP-1537/Lab 8/models/: itemModel.js  userModel.js
COMP-1537/Lab 8/views/: 404.html  community-items.html  login.html  my-items.html  signup.html
COMP_1510/Assignments/A1/: colour_mixer.py  compound_interest.py  lotto.py  phone_fun.py  random_game.py  roman_numbers.py  time_calculator.py
COMP_1510/Assignments/A2/: dnd_driver.py  dungeonsanddragons.py  test_choose_inventory.py  test_combat_round.py  test_create_character.py  test_generate_name.py  test_print_character.py  test_read_inventory.py  test_roll_die.py
COMP_1510/Lab01/HelloWorld/: Poem.py  Pregunta 17.py  Temperature.py
COMP_1510/Lab02/: functions.py  my_circle.py  room_painter.py
COMP_1510/Lab03/: base_conversion.py  errors.py  functions.py
COMP_1510/Lab04/: test_colour_mixer.py  test_compound_interest.py  test_convert_to_roman.py  test_number translator.py  test_number_generator.py  test_rock_paper_scissors.py  test_time_calculator.py
COMP_1510/Lab05/: Lab05.py  Lab05_unittest.py  game_driver.py
COMP_1510/Lab06/: sparse_unittest.py  sparsevector.py
COMP_1510/Lab07/: midterm.py
COMP_1510/Lab08/: maze.py
COMP_1510/Lab08/testing/: functions.py  test_get_possible_moves.py  test_make_board.py  test_make_move.py  test_print_board.py  test_request_move.py
COMP_2510/Lab 10/: CMakeLists.txt  main.c
COMP_2510/Lab 3/: main.c
COMP_2510/Lab 4/: main.c
COMP_2510/Lab 5/: bit_manipulation.h  main  main.c  sample_file.txt
COMP_2510/Lab 8/: CMakeLists.txt  example.txt  main.c
COMP_2510/Linked List Assignment/: CMakeLists.txt  linked_list.c
COMP_2510/assignments/assignment_03/: CMakeLists.txt  memory.c  memory.h  test_memory.c
COMP_2510/assignments/assignment_04/: CMakeLists.txt  main.c
COMP_2510/assignments/assignment_05/: CMakeLists.txt  main.c  test1.txt  test2.txt  test3.txt
COMP_2510/data_structures/: CMakeLists.txt  bst.c  bst.h  dllist.c  dllist.h  linked_list.c  linked_list.h  stack.c  stack.h  test_bst.c  test_dllist.c  test_linked_list.c  test_stack.c
COMP_2510/labs/lab_04/: main.c
COMP_2510/labs/lab_05/: bin_table.h  constants.h  run.sh  table_parser.h  utils.h
COMP_2510/labs/lab_08/: example.txt
COMP_2510/labs/lab_09/: main.c
COMP_2510/labs/lab_10/: CMakeLists.txt  main.c
COMP_2510/labs/lab_11/: CMakeLists.txt  main.c
COMP_2510/labs/lab_12/: CMakeLists.txt  main.c
COMP_2510/linked_list/: linked_list.c  test_linked_list.c
COMP_2510/memory_linked_list/: CMakeLists.txt  memory_management.c  test_memory_management.c
COMP_2510/midterm/: main.c  question1.h  question2.h  question3.h
COMP_2522/src/com/school/comp2522/assignments/a1/: Guppy.java
COMP_2522/src/com/school/comp2522/assignments/a2/: Driver.java  Ecosystem.java  Fish.java  Guppy.java  GuppyTest.java  Pool.java  PoolTest.java  Range.java  Utils.java
COMP_2522/src/com/school/comp2522/assignments/a3/: AbstractOperation.java  AdditionOperation.java  DivisionOperation.java  Main.java  Operation.java  (+11 more)
(+27 files in other folders)
